--- a/src/views/Modals/custom-animation.css
+++ b/src/views/Modals/custom-animation.css
@@ -1,19 +1,56 @@
+@font-face {
+  font-family: "medical-bold";
+  src: url("../../assets/fonts/Duepuntozero-Bold-Trial.ttf") format("truetype");
+}
+@font-face {
+  font-family: "medical-regular";
+  src: url("../../assets/fonts/Duepuntozero-Regular-Trial.ttf") format("truetype");
+}
+
+.css-3pxmmn {
+  left: 150px !important;
+  padding-bottom: 70px !important;
+}
+
 .css-3pxmmn > div  {
   width: 100% !important;
   height: 100% !important;
   background: white !important;
   margin-top: 100px;
   padding-top: 50px;
-  min-height: 800px;
-
+  min-height: 850px;
+  font-family: medical-bold, sans-serif;
+  font-size: 18px
+}
+.messages > h3 {
+  background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+  min-height: 50px;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .css-3pxmmn {
   background: white;
   border: 1px solid;
   padding: 10px;
   box-shadow: 5px 10px 18px red;
-
 }
 .messages {
   text-align: center;
+  margin-top: 90px;
+}
+.form-border {
+  background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+  border-radius: 5px 80px 5px;
+  padding-bottom: 20px;
+
+}
+button {
+  margin-top: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
