--- a/src/views/Modals/custom-animation.css
+++ b/src/views/Modals/custom-animation.css
@@ -39,7 +39,7 @@
 }
 .messages {
   text-align: center;
-  margin-top: 90px;
+  margin-top: 50px;
 }
 .form-border {
   background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
@@ -47,7 +47,7 @@
   padding-bottom: 20px;
 
 }
-button {
+.save-btn {
   margin-top: 30px;
   display: block;
   margin-left: auto;
