finishing api consumption

--- a/src/views/Modals/custom-animation.css
+++ b/src/views/Modals/custom-animation.css
@@ -74,7 +74,7 @@
 
 }
 textarea {
-  font-family: medical-light, sans-serif !important;
+  font-family: sans-serif !important;
   text-align: center;
 }
 .drug-btn.add {
